--- a/style/index.scss
+++ b/style/index.scss
@@ -1,3 +1,5 @@
 @import "common/init";
 @import "body/grid";
-@import "body/header"
+@import "body/header";
+@import "body/sidebar";
+@import "body/display";
