--- a/style/body/grid.scss
+++ b/style/body/grid.scss
@@ -1,5 +1,5 @@
 body {
     display: grid;
-    grid-template-rows: [header-start] 10vh [header-end content-start] min-content [content-end];
-    grid-template-columns: [sidebar-start] 30vw [sidebar-end display-start] 70vw [display-end];
+    grid-template-rows: [header-start] 15vh [header-end content-start] 85vh [content-end];
+    grid-template-columns: [sidebar-start] 20vw [sidebar-end display-start] 80vw [display-end];
 }
