--- a/style/common/colors.scss
+++ b/style/common/colors.scss
@@ -1,2 +1,5 @@
 $gray1: rgba(246, 246, 246, 0.562);
 $gray2: rgba(221, 221, 221, 0.562);
+$color-instagram: #e95950;
+$color-youtube: #d14b4b;
+$color-spotify: #1DB954;
