--- a/style/output/index.css
+++ b/style/output/index.css
@@ -25,10 +25,10 @@ body {
 header {
   grid-column: sidebar-start/display-end;
   font-size: 2rem;
-  background: linear-gradient(to right, white, whitesmoke);
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.526), whitesmoke), url("../../assets/images/avatars-Lo9oruaAMvM5QsWL-0uJ23w-t500x500.jpg") top left/auto 100% no-repeat;
   display: flex;
   align-items: center;
-  padding: 0 5rem;
+  padding: 0 5rem 0 15rem;
   justify-content: space-between;
 }
 header #social {
