--- a/style/output/index.css
+++ b/style/output/index.css
@@ -90,3 +90,21 @@ header #social a.fa-soundcloud {
   font-size: 3rem;
   margin-bottom: 2rem;
 }
+#display .metadata {
+  margin-top: 2rem;
+  padding-top: 2rem;
+  border-top: solid 1px rgba(221, 221, 221, 0.562);
+  display: grid;
+  grid-template-columns: [heading-start] 20% [heading-end body-start] 80% [body-end];
+  grid-template-rows: repeat(6, min-content);
+  grid-row-gap: 1rem;
+}
+#display .metadata p {
+  font-size: 2rem;
+}
+#display .metadata .heading {
+  grid-column: heading-start/heading-end;
+}
+#display .metadata .body {
+  grid-column: body-start/body-end;
+}
