--- a/style/body/sidebar.scss
+++ b/style/body/sidebar.scss
@@ -1,10 +1,12 @@
 @import "../common/colors";
+@import "../common/fonts.scss";
 
 #sidebar {
     background-color: $gray1;
 
     .item-link {
         font-size: 2.5rem;
+        font-family: $fira;
         display: flex;
         padding: 3rem;
         border-bottom: solid 1px $gray2;
