--- a/style/output/index.css
+++ b/style/output/index.css
@@ -25,11 +25,15 @@ body {
 header {
   grid-column: sidebar-start/display-end;
   font-size: 2rem;
+  font-family: "Fira Sans", sans-serif;
   background: linear-gradient(to right, rgba(255, 255, 255, 0.526), whitesmoke), url("../../assets/images/avatars-Lo9oruaAMvM5QsWL-0uJ23w-t500x500.jpg") top left/auto 100% no-repeat;
   display: flex;
   align-items: center;
   padding: 0 5rem 0 15rem;
   justify-content: space-between;
+}
+header h1 {
+  font-weight: 400;
 }
 header #social {
   display: grid;
@@ -73,6 +77,7 @@ header #social a.fa-soundcloud {
 }
 #sidebar .item-link {
   font-size: 2.5rem;
+  font-family: "Fira Sans", sans-serif;
   display: flex;
   padding: 3rem;
   border-bottom: solid 1px rgba(221, 221, 221, 0.562);
@@ -89,6 +94,8 @@ header #social a.fa-soundcloud {
 #display h1 {
   font-size: 3rem;
   margin-bottom: 2rem;
+  font-family: "Fira Sans", sans-serif;
+  font-weight: 500;
 }
 #display .metadata {
   margin-top: 2rem;
@@ -101,6 +108,7 @@ header #social a.fa-soundcloud {
 }
 #display .metadata p {
   font-size: 2rem;
+  font-family: "Fira Sans", sans-serif;
 }
 #display .metadata .heading {
   grid-column: heading-start/heading-end;
