Add highlight color

--- a/style/body/display.scss
+++ b/style/body/display.scss
@@ -7,8 +7,8 @@
     h1 {
         font-size: 3rem;
         margin-bottom: 2rem;
-        font-family: $fira;
-        font-weight: 500;
+        font-family: $manrope;
+        font-weight: bold;
     }
 
     .metadata {
