--- a/style/body/header.scss
+++ b/style/body/header.scss
@@ -1,11 +1,20 @@
 @import "../common/colors.scss";
 @import "../common/fonts.scss";
 
+#header-image {
+    grid-column: sidebar-start / display-end;
+    background: linear-gradient(to bottom right, rgba(242, 255, 0, 0.077), rgba(255, 0, 0, 0.071)), url(../../assets/images/saugatowers4.png);
+    background-size: 100% auto;
+    background-position: top 0;
+    background-repeat: no-repeat;
+    overflow: visible;
+}
+
 header {
     grid-column: sidebar-start / display-end;
     font-size: 1.8rem;
     font-family: $fira;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0.526), whitesmoke), url('../../assets/images/avatars-Lo9oruaAMvM5QsWL-0uJ23w-t500x500.jpg') top left/auto 100% no-repeat;
+    background: linear-gradient(to right, rgba(255, 255, 255, 0), whitesmoke), url('../../assets/images/avatars-Lo9oruaAMvM5QsWL-0uJ23w-t500x500.jpg') top left/auto 100% no-repeat;
     display: flex;
     align-items: center;
     padding: 0 5rem 0 15rem;
