--- a/style/common/colors.scss
+++ b/style/common/colors.scss
@@ -3,4 +3,5 @@ $gray2: rgba(221, 221, 221, 0.562);
 $color-instagram: #e95950;
 $color-youtube: #d14b4b;
 $color-spotify: #1DB954;
+$color-soundcloud: orange;
 $color-highlight: #a93838;
