--- a/style/output/index.css
+++ b/style/output/index.css
@@ -116,7 +116,6 @@ header #social a.fa-soundcloud {
   border-top: solid 1px rgba(221, 221, 221, 0.562);
   display: grid;
   grid-template-columns: [heading-start] 20% [heading-end body-start] 80% [body-end];
-  grid-template-rows: repeat(6, min-content);
   grid-row-gap: 1rem;
 }
 #display .metadata p {
@@ -128,4 +127,34 @@ header #social a.fa-soundcloud {
 }
 #display .metadata .body {
   grid-column: body-start/body-end;
+}
+#display .social {
+  display: flex;
+  margin-top: 2rem;
+}
+#display .social a.fa-2x {
+  font-size: 4rem;
+  display: flex;
+  padding: 1rem;
+  color: white;
+  background-color: black;
+  margin-right: 1rem;
+  width: 8rem;
+  height: 8rem;
+  align-items: center;
+  justify-content: center;
+  transition: transform 0.1s;
+}
+#display .social a.fa-youtube {
+  background-color: #d14b4b;
+}
+#display .social a.fa-spotify {
+  background-color: #1DB954;
+}
+#display .social a.fa-soundcloud {
+  background-color: orange;
+}
+#display .social a:hover {
+  cursor: pointer;
+  transform: translateY(-5px);
 }
