--- a/style/body/header.scss
+++ b/style/body/header.scss
@@ -5,7 +5,7 @@
     grid-column: sidebar-start / display-end;
     background: linear-gradient(to bottom right, rgba(242, 255, 0, 0.077), rgba(255, 0, 0, 0.071)), url(../../assets/images/saugatowersBW.png);
     background-size: 100% auto;
-    background-position: top 0;
+    background-position: 0 0;
     background-repeat: no-repeat;
     overflow: visible;
 }
@@ -19,6 +19,13 @@ header {
     align-items: center;
     padding: 0 5rem 0 18rem;
     justify-content: space-between;
+
+    @media only screen and (max-width: $bp-large) {
+        flex-direction: column;
+        padding: 0%;
+        justify-content: center;
+        background: linear-gradient(to right, rgba(255, 255, 255, 0.779), whitesmoke), url('../../assets/images/avatars-Lo9oruaAMvM5QsWL-0uJ23w-t500x500.jpg') top left/auto 100% no-repeat;
+    }
 
     h1 {
         font-weight: 500;
