--- a/style/common/init.scss
+++ b/style/common/init.scss
@@ -12,6 +12,10 @@ html {
     box-sizing: border-box;
     font-size: 62.5%;
 
+    a {
+        text-decoration: none
+    }
+
     @media only screen and (max-width: $bp-largest) {
         font-size: 50%;
     }
