--- a/style/body/display.scss
+++ b/style/body/display.scss
@@ -18,11 +18,16 @@
 
     .metadata {
         margin-top: 2rem;
+        margin-bottom: 2rem;
         padding-top: 2rem;
         border-top: solid 1px $gray2;
         display: grid;
         grid-template-columns: [heading-start]20%[heading-end body-start]80%[body-end];
         grid-row-gap: 1rem;
+
+        @media only screen and (max-width: $bp-large) {
+            grid-template-columns: [heading-start]30%[heading-end body-start]max-content[body-end];
+        }
 
         p {
             font-size: 2rem;
@@ -42,6 +47,13 @@
         display: flex;
         margin-top: 2rem;
 
+        @media only screen and (max-width: $bp-large) {
+            display: grid;
+            grid-template-columns: repeat(5, min-content);
+            grid-column-gap: 0.5rem;
+            justify-content: center;
+        }
+
         a.fa-2x {
             font-size: 4rem;
             display: flex;
@@ -54,6 +66,13 @@
             align-items: center;
             justify-content: center;
             transition: transform 0.1s;
+
+            @media only screen and (max-width: $bp-large) {
+                margin: 0;
+                width: 7rem;
+                height: 7rem;
+                font-size: 4rem;
+            }
         }
 
         a.fa-youtube {
