--- a/style/body/grid.scss
+++ b/style/body/grid.scss
@@ -2,7 +2,7 @@
 
 body {
     display: grid;
-    grid-template-rows: [headerimage-start] 80vh [headerimage-end header-start] minmax(12rem, 20vh) [header-end content-start] max-content [content-end];
+    grid-template-rows: [headerimage-start] 80vh [headerimage-end header-start] minmax(12rem, 20vh) [header-end menu-start]max-content[menu-end content-start] max-content [content-end];
     grid-template-columns: [sidebar-start] 20vw [sidebar-end display-start] 80vw [display-end];
 
     @media only screen and (max-width: $bp-large) {
