--- a/style/index.scss
+++ b/style/index.scss
@@ -1,5 +1,7 @@
 @import "common/init";
+@import "common/shadows";
 @import "body/grid";
 @import "body/header";
+@import "body/menu";
 @import "body/sidebar";
 @import "body/display";
