--- a/style/body/header.scss
+++ b/style/body/header.scss
@@ -19,6 +19,7 @@ header {
     align-items: center;
     padding: 0 5rem 0 18rem;
     justify-content: space-between;
+    box-shadow: $dropshadow1;
 
     @media only screen and (max-width: $bp-large) {
         flex-direction: column;
