Allow switch singles/albums

--- a/style/body/menu.scss
+++ b/style/body/menu.scss
@@ -35,6 +35,7 @@
         cursor: pointer;
         background-color: white;
         box-shadow: $upshadow1;
+        color: $color-highlight;
 
         i {
             transform: translateY(-5px);
