--- a/style/output/index.css
+++ b/style/output/index.css
@@ -133,6 +133,7 @@ header #social a.fa-soundcloud {
   cursor: pointer;
   background-color: white;
   box-shadow: 0 1px 4px 1px rgb(216, 216, 216) inset;
+  color: #a93838;
 }
 #menu button:hover i {
   transform: translateY(-5px);
