Add button clicked styles

--- a/style/body/menu.scss
+++ b/style/body/menu.scss
@@ -31,7 +31,8 @@
         }
     }
 
-    button:hover {
+    button:hover,
+    button.button-clicked {
         cursor: pointer;
         background-color: white;
         box-shadow: $upshadow1;
