--- a/style/body/sidebar.scss
+++ b/style/body/sidebar.scss
@@ -15,7 +15,7 @@
         font-family: $manrope;
         font-weight: bold;
         display: flex;
-        padding: 3rem;
+        padding: 3rem 0.5rem 3rem 2rem;
         border-bottom: solid 1px $gray2;
         transition: background-color 0.1s;
 
