--- a/style/common/colors.scss
+++ b/style/common/colors.scss
@@ -1,7 +1,10 @@
 $gray1: rgba(246, 246, 246, 0.562);
 $gray2: rgba(221, 221, 221, 0.562);
+// socials
 $color-instagram: #e95950;
 $color-youtube: #d14b4b;
 $color-spotify: #1DB954;
 $color-soundcloud: orange;
+$color-napster: #0054a8;
+
 $color-highlight: #a93838;
