Add footer image

--- a/style/body/header.scss
+++ b/style/body/header.scss
@@ -18,7 +18,7 @@ header {
     grid-column: sidebar-start / display-end;
     font-size: 1.8rem;
     font-family: $fira;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0.179), whitesmoke), url('../../assets/images/avatars-Lo9oruaAMvM5QsWL-0uJ23w-t500x500.jpg') top left/auto 100% no-repeat;
+    background: linear-gradient(to right, rgba(255, 255, 255, 0.179), whitesmoke), url('../../assets/images/stylus.jpg') top left/auto 100% no-repeat;
     display: flex;
     align-items: center;
     padding: 0 5rem 0 18rem;
