--- a/style/output/index.css
+++ b/style/output/index.css
@@ -49,7 +49,7 @@ header {
   grid-column: sidebar-start/display-end;
   font-size: 1.8rem;
   font-family: "Fira Sans", sans-serif;
-  background: linear-gradient(to right, rgba(255, 255, 255, 0.179), whitesmoke), url("../../assets/images/avatars-Lo9oruaAMvM5QsWL-0uJ23w-t500x500.jpg") top left/auto 100% no-repeat;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.179), whitesmoke), url("../../assets/images/stylus.jpg") top left/auto 100% no-repeat;
   display: flex;
   align-items: center;
   padding: 0 5rem 0 18rem;
@@ -307,4 +307,72 @@ header #social a.fa-soundcloud {
 #display .social a:hover {
   cursor: pointer;
   transform: translateY(-5px);
+}
+
+footer {
+  min-height: 30vh;
+  grid-column: sidebar-start/display-end;
+  grid-column-gap: 2rem;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.862), rgba(97, 97, 97, 0.922), rgba(0, 0, 0, 0.862)), url(../../assets/images/saugatowersBW.png);
+  background-position: 0 25%;
+  padding: 4rem 2rem 5rem 2rem;
+}
+footer img {
+  grid-row: 1/3;
+  grid-column: 1/2;
+  height: 13rem;
+  filter: drop-shadow(2px 3px 6px rgb(63, 63, 63));
+}
+footer p {
+  grid-column: 2/3;
+  font-size: 1.7rem;
+  font-family: "Manrope", sans-serif;
+  color: white;
+  text-align: center;
+}
+footer #social {
+  grid-column: 2/3;
+  display: grid;
+  grid-template-columns: repeat(6, min-content);
+}
+footer #social a {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 10px;
+  height: 100%;
+  color: white;
+  transition: background-color 0.1s;
+  font-size: 3.5rem;
+}
+footer #social a:nth-child(1) {
+  font-family: "Manrope", sans-serif;
+  font-size: 1.7rem;
+}
+footer #social a:before {
+  padding: 5px 7px;
+}
+footer #social a:hover {
+  background-color: rgba(221, 221, 221, 0.562);
+}
+footer #social a.fa-instagram {
+  color: #e95950;
+}
+footer #social a.fa-youtube {
+  color: #d14b4b;
+}
+footer #social a.fa-apple {
+  color: white;
+}
+footer #social a.fa-spotify {
+  color: #1DB954;
+}
+footer #social a.fa-soundcloud {
+  color: orange;
 }
