--- a/style/body/display.scss
+++ b/style/body/display.scss
@@ -3,6 +3,12 @@
 
 #display {
     padding: 4rem 5rem;
+    background: linear-gradient(to bottom right, rgb(255 255 255 / 81%), rgb(255 255 255 / 94%)), url(../../assets/images/saugatowersBW.png);
+    background-size: 100% auto;
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-color: white;
 
     @media only screen and (max-width: $bp-large) {
         grid-row: content-start / content-end;
