--- a/style/body/header.scss
+++ b/style/body/header.scss
@@ -26,15 +26,11 @@ header {
     justify-content: space-between;
     box-shadow: $dropshadow1;
 
-    @media only screen and (max-width: $bp-large) {
+    @media only screen and (max-width: $bp-mid) {
         flex-direction: column;
         padding: 0%;
         justify-content: center;
         background: linear-gradient(to right, rgba(255, 255, 255, 0.179), whitesmoke), url('../../assets/images/avatars-Lo9oruaAMvM5QsWL-0uJ23w-t500x500.jpg') top left/auto 100% no-repeat;
-    }
-
-    @media only screen and (max-width: $bp-mid) {
-        background: linear-gradient(to right, rgba(255, 255, 255, 0.8), whitesmoke), url('../../assets/images/avatars-Lo9oruaAMvM5QsWL-0uJ23w-t500x500.jpg') top left/auto 100% no-repeat;
     }
 
     @media only screen and (max-width: $bp-small) {
@@ -45,6 +41,15 @@ header {
         font-weight: 500;
         letter-spacing: -1px;
         font-family: $manrope;
+
+        @media only screen and (max-width: $bp-large) {
+            font-size: 3.5rem;
+            text-align: center;
+        }
+
+        @media only screen and (max-width: $bp-small) {
+            font-size: 2.5rem;
+        }
     }
 
     #social {
