Add Ekklēsia data

--- a/style/body/display.scss
+++ b/style/body/display.scss
@@ -41,7 +41,7 @@
         margin-top: 2rem;
         margin-bottom: 2rem;
         padding-top: 2rem;
-        border-top: solid 1px $gray2;
+        border-top: solid 1px $dark1;
         display: grid;
         grid-template-columns: [heading-start]20%[heading-end body-start]80%[body-end];
         grid-row-gap: 1rem;
