--- a/style/common/colors.scss
+++ b/style/common/colors.scss
@@ -1,5 +1,6 @@
 $gray1: rgba(246, 246, 246, 0.562);
 $gray2: rgba(221, 221, 221, 0.562);
+$dark1: rgba(180, 180, 180, 0.562);
 // socials
 $color-instagram: #e95950;
 $color-youtube: #d14b4b;
